Fixed text on examn text boxes being black on dark mode.

--- a/eva_dark_mode.user.css
+++ b/eva_dark_mode.user.css
@@ -3,7 +3,7 @@
 @namespace      https://github.com/ScyllarusDactyl/EVA-Dark-Mode
 @homepageURL    https://github.com/ScyllarusDactyl/EVA-Dark-Mode
 @updateURL      https://raw.githubusercontent.com/ScyllarusDactyl/EVA-Dark-Mode/master/eva_dark_mode.user.css
-@version        2.3.16
+@version        2.3.17
 @license        LGPL-3.0-or-later
 @description    Modo oscuro para eva.unapec.edu.do
 @author         ScyllarusDactyl
@@ -2163,6 +2163,7 @@
 
     .editor_atto_content_wrap {
         background-color: @back3;
+        color           : @text1;
 
         .editor_atto_content {
             border-top-left-radius : 0;
